# proj-fastapi

./: Readme.md  pyproject.toml
tests/: test_app.py
